--- a/lesson2/main.css
+++ b/lesson2/main.css
@@ -8,7 +8,6 @@ body {
 
 .Global-box {
     column-gap: 40px;
-    background-color: blue;
     width: 100%;
     height: 400px;
     align-items: center;
@@ -17,8 +16,8 @@ body {
 }
 
 .box {
-    background-color: white;
+    background-color: dodgerblue;
     width: 250px;
     height: 150px;
-    justify-content: space-around;
+    align-content: center;
 }
