--- a/lesson2/main.css
+++ b/lesson2/main.css
@@ -1,23 +1,30 @@
 body {
     margin: 0px;
+    text-align: center;
 }
 
 .target {
     background-color: royalblue;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .Global-box {
-    column-gap: 40px;
+    height: 130px;
     width: 100%;
-    height: 400px;
-    align-items: center;
     display: flex;
-    justify-content: space-around;
+    margin: 0px;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: dodgerblue;
-    width: 250px;
+    width: 460px;
     height: 150px;
-    align-content: center;
 }
